feat: :wrench: register customRegions config key, set it by default and use it

--- a/package.json
+++ b/package.json
@@ -33,7 +33,16 @@
         "mac": "cmd+alt+NumPad0",
         "when": "editorTextFocus"
       }
-    ]
+    ],
+    "configuration": {
+      "type": "object",
+      "properties": {
+        "react-code-regions.customRegions": {
+          "type": "array",
+          "description": "Custom regions for react code"
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
